objects/Apttus_Config2__ProductClassification__c.object
<CustomObject>
    <description>Represents a product classification which is a member of the list of products associated with a classification.</description>
    <fields>
        <fullName>APTS_Cat_Hier_Ext_ID__c</fullName>
        <description>Store the External id information of the parent object</description>
        <label>APTS Cat Hier Ext ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Product_Ext_ID__c</fullName>
        <description>Fields to store the External id information of the parent object.</description>
        <label>APTS Product Ext ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationId__c</fullName>
        <description>ID of the associated category</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The default quantity that should be presented to the user for selection. This is applicable only to options or components.</description>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option is a default for the product. This is applicable only to options or components.</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The maximum quantity of the option that may be selected. The quantity can be zero. This is applicable only to options or components.</description>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The minimum quantity of the option that must be selected. The quantity can be zero. This is applicable only to options or components.</description>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Modifiable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the option or component is modifiable during selection. This is applicable only to options or components.</description>
        <label>Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The sequence which the product should appear in the category.</description>
        <inlineHelpText>The sequence which the product should appear in the category.</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Parent_Hierarchy__c</fullName>
        <formula>IF(NOT(ISBLANK(Apttus_Config2__ClassificationId__r.Apttus_Config2__AncestorId__r.Name )), Apttus_Config2__ClassificationId__r.Apttus_Config2__AncestorId__r.Name + IF(NOT(ISBLANK(Apttus_Config2__ClassificationId__r.Apttus_Config2__AncestorId__r.Apttus_Config2__AncestorId__r.Name )), &quot;--&quot; + Apttus_Config2__ClassificationId__r.Apttus_Config2__AncestorId__r.Apttus_Config2__AncestorId__r.Name + IF(NOT(ISBLANK(Apttus_Config2__ClassificationId__r.Apttus_Config2__AncestorId__r.Apttus_Config2__AncestorId__r.Apttus_Config2__AncestorId__r.Name )), &quot;--&quot; + Apttus_Config2__ClassificationId__r.Apttus_Config2__AncestorId__r.Apttus_Config2__AncestorId__r.Apttus_Config2__AncestorId__r.Name, &quot;&quot;), &quot;&quot;), Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Parent Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Product_Description__c</fullName>
        <description>Description to be displayed for a Product on the Digital Configurator.</description>
        <label>Product Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DC_Product_Jurisdiction__c</fullName>
        <label>Product Jurisdiction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Product_Title__c</fullName>
        <label>Product Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Product Classification</label>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Classification Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>